gander.ebnf
program             = { definition | expression };

definition          = enum_def
                    | struct_def
                    | variable_def
                    | function_def;

enum_def            = identifier "=" "#" newline
                    { indent enum_variant newline };

enum_variant        = identifier;

struct_def          = identifier "=" "$" newline
                    { indent struct_field newline };

struct_field        = identifier ":" type;

variable_def        = [ type ] identifier "=" expression;

function_def        = [ function_type_decl ] function_header;

function_type_decl  = "@" type { "," type } "->" type newline;

function_header     = identifier ":" parameter_list newline indent expression_block;

parameter_list      = identifier { "," identifier };

expression          = comparison_expr;

expression_block    = expression { newline expression };

comparison_expr     = additive_expr [ comparison_op additive_expr ];

comparison_op       = "==" | "!=" | "<" | ">" | "<=" ">=";

additive_expr       = multiplicative_expr { ( "+" | "-" ) multiplicative_expr };

multiplicative_expr = unary_expr { ( "/" | "*" | "%" ) unary_expr };

unary_expr          = [ "~" | "-" ] primary_expr;

primary_expr        = struct_access
                    | enum_access
                    | function_call
                    | identifier
                    | literal
                    | "(" expression ")";

type                = primitive_type
                    | identifier
                    | function_type;

primitive_type      = "Int" | "Float" | "Bool" | "String";

struct_access       = ( identifier | function_call ) "." identifier;

enum_access         = identifier "::" identifier;

function_type       = "(" type { "," type } ")" "->" type;

function_call       = identifier "(" [ expression { "," expression } ] ")";

identifier          = letter { letter | digit | "_" };

literal             = int_lit | float_lit | bool_lit | string_lit;

int_lit             = digit { digit };

float_lit           = digit { digit } "." digit { digit };

bool_lit            = "true" | "false";

string_lit          = '"' , { all characters - '"' }, '"';

letter              = "A" | ... | "Z"
                    | "a" | ... | "z";

digit               = "0" | ... | "9";~

newline             = "\n";

indent              = "\t";

characters          = ? all visible characters ?;
